# goodreads-mcp

./: .gitignore  README.md  pyproject.toml
goodreads_mcp/: client.py  config.py  server.py
tests/: test_parsers.py  test_smoke_live.py
