[project]
name = "goodreads-mcp"
version = "0.1.0"
description = "Read-only MCP server for Goodreads (no API required): search, books, shelves, ratings"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0", "httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
goodreads-mcp = "goodreads_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goodreads_mcp"]
